fixed the background on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,6 @@ body {
     background-repeat: no-repeat; 
     background-position: center;
     background-size: cover;
-    height: 150vh;
     font-family:cursive;
     display: flex;
     min-height: 100vh;
